force-app/main/default/objects/Annual_Sales_Data__c/Annual_Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Annual Sales Data</label>
    <nameField>
        <displayFormat>ASD-{0000000}</displayFormat>
        <label>Annual Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>