force-app/main/default/objects/Annual_Sales_Data__c/fields/Full_Year_Target__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Target__c</fullName>
    <label>Full Year Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>