force-app/main/default/objects/Annual_Sales_Data__c/fields/Full_Year_Target_Percent__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Target_Percent__c</fullName>
    <label>Full Year Target %</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>