force-app/main/default/objects/Annual_Sales_Data__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>