force-app/main/default/objects/Annual_Sales_Data__c/fields/Product_Sales_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Summary__c</fullName>
    <formula>TEXT( Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sales Summary</label>
    <type>Text</type>
</CustomField>