force-app/main/default/objects/Annual_Sales_Data__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Territory Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Sales Data</relationshipLabel>
    <relationshipName>Annual_Sales_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>