force-app/main/default/objects/Annual_Sales_Data__c/fields/This_Year_ADS_Growth__c.field-meta.xml
<CustomField>
    <fullName>This_Year_ADS_Growth__c</fullName>
    <label>CY ADS % Growth</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>