force-app/main/default/objects/Annual_Sales_Data__c/fields/This_Year_YTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>This_Year_YTD_Growth__c</fullName>
    <label>CY YTD $ Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>