force-app/main/default/objects/Annual_Sales_Data__c/fields/This_Year_YTD_Sales_Thru_Month__c.field-meta.xml
<CustomField>
    <fullName>This_Year_YTD_Sales_Thru_Month__c</fullName>
    <label>This Year YTD Sales Thru Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>