force-app/main/default/objects/Annual_Sales_Data__c/fields/This_Year_YTD_Target_Thru_Month__c.field-meta.xml
<CustomField>
    <fullName>This_Year_YTD_Target_Thru_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>This Year YTD Target Thru Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>