force-app/main/default/objects/Annual_Sales_Data__c/fields/This_Year_YTD_to_Target__c.field-meta.xml
<CustomField>
    <fullName>This_Year_YTD_to_Target__c</fullName>
    <label>CY YTD % to Target</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>