force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_1_Sales__c.field-meta.xml
<CustomField>
    <fullName>Y_1_Sales__c</fullName>
    <label>Y-1 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>