force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_1_YTD_Sales_Thru_Month__c.field-meta.xml
<CustomField>
    <fullName>Y_1_YTD_Sales_Thru_Month__c</fullName>
    <label>Y-1 YTD Sales Thru Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>