force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_2_Growth__c.field-meta.xml
<CustomField>
    <fullName>Y_2_Growth__c</fullName>
    <label>Y-2 $ Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>