force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_2_Percentage_Growth__c.field-meta.xml
<CustomField>
    <fullName>Y_2_Percentage_Growth__c</fullName>
    <label>Y-2 ADS % Growth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>