force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_3_Growth__c.field-meta.xml
<CustomField>
    <fullName>Y_3_Growth__c</fullName>
    <label>Y-3 $ Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>