force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_3_Percentage_Growth__c.field-meta.xml
<CustomField>
    <fullName>Y_3_Percentage_Growth__c</fullName>
    <label>Y-3 ADS % Growth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>