force-app/main/default/objects/Annual_Sales_Data__c/fields/Y_3_Sales__c.field-meta.xml
<CustomField>
    <fullName>Y_3_Sales__c</fullName>
    <description>Refer Year field for Y</description>
    <label>Y-3 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>